# MicroServiceContainer

./: README.md
Launcher/: CMakeLists.txt  main.cpp
Service/: CMakeLists.txt  IMicroService.h  MicroService.cpp  MicroService.h  Service.h
Transmitter/: CMakeLists.txt  Transmitter.cpp  Transmitter.h
scripts/: build.sh  package-mobile.sh
